[workspace]

[package]
name = "hologram-spaceship-randomness-function"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hologram-spaceship-randomness-function"
path = "src/main.rs"

[dependencies]
tokio = "^1"
futures = "0.3"
switchboard-solana = "0.28"
bytemuck = "1.13"
# hologram = { path = "../Imperium/programs/hologram" }
